<resources>
    <string name="app_name">Book API</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="phone_number">phone number</string>
    <string name="password">password</string>
    <string name="confirm">confirm</string>
    <string name="you_are_new">You are new?</string>
    <string name="create_new">Create new</string>
    <string name="verification_code">Verification Code</string>
    <string name="check">check</string>
</resources>